Fix clipped modal scrolling on mobile

--- a/javascript_react/src/components/compensation_editor/compensation_editor.css
+++ b/javascript_react/src/components/compensation_editor/compensation_editor.css
@@ -2,10 +2,10 @@
   font-size: 12px;
   width: 350px;
   height: 775px;
-  max-height: calc(100vh - 40px);
+  max-height: calc(100vh - 60px);
   overflow-y: hidden;
   transition: height 0.2s ease-out;
-  padding: 0 25px;
+  padding: 0 25px 15px 25px;
 }
 
 #no-equity {
@@ -134,6 +134,7 @@
 
 @media (max-height: 800px) {
   .modal {
+    width: 300px;
     overflow-y: auto;
   }
 }
